fixing collapse scss

--- a/my-react-app/src/components/collapse/collapse.scss
+++ b/my-react-app/src/components/collapse/collapse.scss
@@ -5,7 +5,7 @@
 
     &--small{
     width: 48%;
-    @include smartphone-responsive {
+    @include smallphone-responsive {
         width: 100%;
     }
     }
