--- a/my-react-app/src/pages/houseinfo.scss
+++ b/my-react-app/src/pages/houseinfo.scss
@@ -77,7 +77,6 @@
         justify-content: space-between;
         @include smallphone-responsive {
             flex-direction: column;
-            width: 220%;
         }
     }
     
